Fixed password show / hide option visible issue

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce.css
@@ -4914,3 +4914,30 @@ button.pswp__button--zoom:hover {
 .woocommerce-page .widget .wc-layered-nav-rating .star-rating {
   margin: 0;
 }
+
+.woocommerce form .password-input, .woocommerce-page form .password-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+}
+
+.woocommerce form .show-password-input::after, .woocommerce-page form .show-password-input::after {
+  font-family: WooCommerce;
+  speak: never;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  margin-left: 0.618em;
+  content: "\e010";
+  text-decoration: none;
+}
+
+.woocommerce form .show-password-input, .woocommerce-page form .show-password-input {
+  position:absolute;
+  right: 0.7em;
+  cursor: pointer;
+  top: 0.7em;
+}
